MessageRefactor sweep: dms becomes _cms

--- a/portal/src/main/resources/i18n/messages_en.properties
+++ b/portal/src/main/resources/i18n/messages_en.properties
@@ -106,6 +106,50 @@ _action.view.in.original.context=View in original context
 _boolean.and=and
 _boolean.not=not
 _boolean.or=or
+_cms.administration.images=Image administration
+_cms.administration.pages=Page administration
+_cms.administration.title=Administration
+_cms.administration.users=User administration
+_cms.cancel=Cancel
+_cms.change=Change
+_cms.create=Create
+_cms.delete=Delete
+_cms.edit=Edit
+_cms.existing.images=Existing images
+_cms.existing.pages=Existing pages
+_cms.find=find
+_cms.goto.upload=Go to Upload
+_cms.html.editor.show.hide=Show / Hide HTML editor
+_cms.image.change=Change this image
+_cms.image.choose=Choose an image
+_cms.image.create=Create new image
+_cms.image.list=Image list
+_cms.image.not.exist=This image does not exist
+_cms.page.create=Create a new page
+_cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
+_cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
+_cms.page.edit=Edit this page
+_cms.page.list=Page list
+_cms.page.not.exist=This page does not exist
+_cms.save=Save
+_cms.update=Update
+_cms.upload=Upload
+_cms.user.change.role.step.1=Fill in the name or email of the user whose role you want to change
+_cms.user.change.role.step.2=Press "Find"
+_cms.user.change.role.step.3=Select the new role for the user from the drop-down list
+_cms.user.change.role.step.4=Press "Change"
+_cms.user.find=Find a user
+_cms.user.not.found=No user found matching your input
+_cms.user.role.administrator=Administrator
+_cms.user.role.choose=Choose a user-role
+_cms.user.role.current=Current role
+_cms.user.role.new=New role
+_cms.user.role.public=Reqular user
+_cms.user.role.set.to=now has the role
+_cms.user.role.super=Super user
+_cms.version.approve=Approve this version
+_cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
+_cms.versions=Versions
 _facet.by.collection=By collection
 _facet.by.country=By country
 _facet.by.date=By date
@@ -288,50 +332,6 @@ _validation.password.short=Password is too short
 _validation.username.exists=Username already exists
 _validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
 _validation.username.long=Username is too long
-dms.administration.images=Image administration
-dms.administration.pages=Page administration
-dms.administration.title=Administration
-dms.administration.users=User administration
-dms.cancel=Cancel
-dms.change=Change
-dms.create=Create
-dms.delete=Delete
-dms.edit=Edit
-dms.existing.images=Existing images
-dms.existing.pages=Existing pages
-dms.find=find
-dms.goto.upload=Go to Upload
-dms.html.editor.show.hide=Show / Hide HTML editor
-dms.image.change=Change this image
-dms.image.choose=Choose an image
-dms.image.create=Create new image
-dms.image.list=Image list
-dms.image.not.exist=This image does not exist
-dms.page.create=Create a new page
-dms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
-dms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
-dms.page.edit=Edit this page
-dms.page.list=Page list
-dms.page.not.exist=This page does not exist
-dms.save=Save
-dms.update=Update
-dms.upload=Upload
-dms.user.change.role.step.1=Fill in the name or email of the user whose role you want to change
-dms.user.change.role.step.2=Press "Find"
-dms.user.change.role.step.3=Select the new role for the user from the drop-down list
-dms.user.change.role.step.4=Press "Change"
-dms.user.find=Find a user
-dms.user.not.found=No user found matching your input
-dms.user.role.administrator=Administrator
-dms.user.role.choose=Choose a user-role
-dms.user.role.current=Current role
-dms.user.role.new=New role
-dms.user.role.public=Reqular user
-dms.user.role.set.to=now has the role
-dms.user.role.super=Super user
-dms.version.approve=Approve this version
-dms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
-dms.versions=Versions
 form.submit=Submit
 languageDropDownList_t=Language
 login.required=You must login or register
