--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -107,6 +107,34 @@ _action.view.in.original.context=Bekijk in oorspronkelijke context
 _boolean.and=en
 _boolean.not=niet
 _boolean.or=of
+_cms.administration.images=Afbeeldingen beheren
+_cms.administration.pages=Paginas beheren
+_cms.administration.title=Beheer
+_cms.administration.users=Gebruikers beheren
+_cms.cancel=Annuleren
+_cms.create=Aanmaken
+_cms.delete=Verwijderen
+_cms.edit=Bewerken
+_cms.existing.images=Bestaande afbeeldingen
+_cms.existing.pages=Bestaande paginas
+_cms.goto.upload=Ga naar Uploaden
+_cms.html.editor.show.hide=Toon / verberg HTML editor
+_cms.image.change=Afbeelding aanpassen
+_cms.image.choose=Kies een afbeelding
+_cms.image.create=Abeelding aanmaken
+_cms.image.list=Afbeelding lijst
+_cms.image.not.exist=Afbeelding bestaat niet
+_cms.page.create=Maak een nieuwe pagina aan
+_cms.page.create.step.1=Voor het aanmaken van een pagina vul in het pad (als gewenst) en de naam van de nieuwe pagina. De naam van de pagina moet eindigen met .dml
+_cms.page.create.step.2=Het basis pad wordt automatisch aangemaakt. Daarop volgende paden zijn niet verplicht maar kunnen wel helpen met het ordennen en overzicht van de paginas.
+_cms.page.edit=Deze pagina bewerken
+_cms.page.not.exist=Deze pagina bestaat niet
+_cms.save=Bewaren
+_cms.update=Aanpassen
+_cms.upload=Uploaden
+_cms.version.approve=Deze versie goedkeuren
+_cms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
+_cms.version.management=Versiebeheer
 _facet.by.collection=Per collectie
 _facet.by.country=Per land
 _facet.by.date=Per datum
@@ -280,34 +308,6 @@ _validation.password.short=Wachtwoord te kort
 _validation.username.exists=Gebrukersnaam bestaat al
 _validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
 _validation.username.long=Gebruikersnaam is te lang
-dms.administration.images=Afbeeldingen beheren
-dms.administration.pages=Paginas beheren
-dms.administration.title=Beheer
-dms.administration.users=Gebruikers beheren
-dms.cancel=Annuleren
-dms.create=Aanmaken
-dms.delete=Verwijderen
-dms.edit=Bewerken
-dms.existing.images=Bestaande afbeeldingen
-dms.existing.pages=Bestaande paginas
-dms.goto.upload=Ga naar Uploaden
-dms.html.editor.show.hide=Toon / verberg HTML editor
-dms.image.change=Afbeelding aanpassen
-dms.image.choose=Kies een afbeelding
-dms.image.create=Abeelding aanmaken
-dms.image.list=Afbeelding lijst
-dms.image.not.exist=Afbeelding bestaat niet
-dms.page.create=Maak een nieuwe pagina aan
-dms.page.create.step.1=Voor het aanmaken van een pagina vul in het pad (als gewenst) en de naam van de nieuwe pagina. De naam van de pagina moet eindigen met .dml
-dms.page.create.step.2=Het basis pad wordt automatisch aangemaakt. Daarop volgende paden zijn niet verplicht maar kunnen wel helpen met het ordennen en overzicht van de paginas.
-dms.page.edit=Deze pagina bewerken
-dms.page.not.exist=Deze pagina bestaat niet
-dms.save=Bewaren
-dms.update=Aanpassen
-dms.upload=Uploaden
-dms.version.approve=Deze versie goedkeuren
-dms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
-dms.version.management=Versiebeheer
 languageDropDownList_t=Taal
 registrationSucceed_t=U bent met succes geregistreerd
 search.order.by=Sorteren op
