--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -107,6 +107,39 @@ _action.view.in.original.context=View in original context
 _boolean.and=and
 _boolean.not=not
 _boolean.or=or
+_cms.administration.images=Image administration
+_cms.administration.pages=Page administration
+_cms.administration.title=Administration
+_cms.administration.users=User administration
+_cms.cancel=Cancel
+_cms.create=Create
+_cms.delete=Delete
+_cms.edit=Edit
+_cms.existing.images=Existing images
+_cms.existing.pages=Existing pages
+_cms.goto.upload=Go to Upload
+_cms.html.editor.show.hide=Show / Hide HTML editor
+_cms.image.change=Change this image
+_cms.image.choose=Choose an image
+_cms.image.create=Create new image
+_cms.image.delete.fail=Image could not be deleted
+_cms.image.delete.question=Delete this image?
+_cms.image.list=Image list
+_cms.image.not.exist=This image does not exist
+_cms.image.rename=Rename this image
+_cms.image.upload.new=Upload new image
+_cms.page.create=Create a new page
+_cms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
+_cms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
+_cms.page.edit=Edit this page
+_cms.page.not.exist=This page does not exist
+_cms.rename=Rename
+_cms.save=Save
+_cms.update=Update
+_cms.upload=Upload
+_cms.version.approve=Approve this version
+_cms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
+_cms.versions=Versions
 _facet.abm.county=county
 _facet.by.collection=null
 _facet.by.country=By country
@@ -289,39 +322,6 @@ _validation.password.short=Password is too short
 _validation.username.exists=Username already exists
 _validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
 _validation.username.long=Username is too long
-dms.administration.images=Image administration
-dms.administration.pages=Page administration
-dms.administration.title=Administration
-dms.administration.users=User administration
-dms.cancel=Cancel
-dms.create=Create
-dms.delete=Delete
-dms.edit=Edit
-dms.existing.images=Existing images
-dms.existing.pages=Existing pages
-dms.goto.upload=Go to Upload
-dms.html.editor.show.hide=Show / Hide HTML editor
-dms.image.change=Change this image
-dms.image.choose=Choose an image
-dms.image.create=Create new image
-dms.image.delete.fail=Image could not be deleted
-dms.image.delete.question=Delete this image?
-dms.image.list=Image list
-dms.image.not.exist=This image does not exist
-dms.image.rename=Rename this image
-dms.image.upload.new=Upload new image
-dms.page.create=Create a new page
-dms.page.create.step.1=To create a new page enter the path (optional) and the name of the new page. The name must end with .dml
-dms.page.create.step.2=The base path will be automatically created. Paths that follow are not mandatory but can help you with creating a logical structure for organizing and grouping pages.
-dms.page.edit=Edit this page
-dms.page.not.exist=This page does not exist
-dms.rename=Rename
-dms.save=Save
-dms.update=Update
-dms.upload=Upload
-dms.version.approve=Approve this version
-dms.version.approve.explain=By approving a version you permanently delete all the other versions of the page
-dms.versions=Versions
 form.submit=Submit
 languageDropDownList_t=Language
 login.failed=Login failed. Please try again
